Fix for carousel on Iphone

--- a/css/organisms/o-head.css
+++ b/css/organisms/o-head.css
@@ -6,7 +6,7 @@ HEAD STYLES
   position: relative;
   max-width: 330px;
   margin: 32px auto;
-  padding: 0 32px;
+  padding: 0;
   line-break: anywhere;
 }
   
